# ProgLearningGround

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  mypy.ini  pyproject.toml
backend/: Dockerfile  mypy.ini  pyproject.toml  ruff.toml  tasks.json
backend/app/: database.py  logger_setup.py  main.py  main_app.py  task_data_loader.py  task_runner.py  tasks.json
backend/app/api/v1/: __init__.py  dependencies.py
backend/app/api/v1/endpoints/: general.py  task.py
backend/app/core/: config.py  logger_setup.py
backend/app/db/: database.py
backend/app/errors/: base.py  task_errors.py
backend/app/middlewares/: exception_middleware.py  logging_middleware.py
backend/app/repositories/: task.py  tasks.py
backend/app/schemas/: code.py  task.py  tasks.py
backend/app/services/: task.py
backend/app/utils/: code_tester.py  repository.py  task_runner.py
backend/tests/: test_logger_setup.py  test_mongo_db_client.py  test_task_repository.py
backend/tests/unit/: test_task_repository.py
backend/tests/unit/schemas/: test_code.py  test_task.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  theme.js
frontend/src/components/: CodeExecutor.js  ResultCard.js  api.js
scripts/: mypy.sh  pytest.sh  ruff.sh
