[tool.poetry]
name = "proglearningground"
version = "0.1.0"
description = ""
authors = ["Andrey Melchikov <andrei.melchikov25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.7.4"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
